--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.3.6",
+    "date-fns": "^2.24.0",
+    "gray-matter": "^4.0.3",
     "next": "^11.0.0",
+    "postcss": "^8.3.8",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "13",
+    "remark-html": "13",
+    "tailwindcss": "^2.2.16"
   }
 }
