--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "remark": "13",
     "remark-html": "13",
     "tailwindcss": "^2.2.16"
+  },
+  "devDependencies": {
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
+    "typescript": "^4.4.3"
   }
 }
